Fix bugs in YouTube URL validation logic